# PulseCraft

./: .gitignore  DEMO_VIDEO_SCRIPT.md  PRODUCT_REQUIREMENTS.md  PulseCraft_Hackathon_Presentation.pptx  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  create_presentation.py  package.json  pyproject.toml  server.js
.github/: create_issues.ps1
.github/ISSUES/: 001-mvp-primary-flow.md  002-view-historical-results.md  003-demo-mode.md  004-persistence-export.md  005-demo-slides-video.md  006-ci-cd-deploy.md
.github/workflows/: azure-deploy.yml  ci.yml
agents/: README.md  compliance.js  composer.js  enricher.js  scorer.js
backend/: .env.example  README.md  package.json  server.js
backend/routes/: demo.js
deployment/: INDEX.md  QUICKSTART.md  README.md  azure.config.template.ps1  azure.config.template.sh  deploy-azure-infrastructure.sh  deploy-backend.sh  deploy-frontend.sh  deploy.ps1
docs/: ARCHITECTURE_DIAGRAM_GUIDE.md  CONTRIBUTING.md  INSTALL.md  README_DEV.md  ROADMAP.md  SPRINT_PLAN.md  TEST_PLAN.md  pulsecraft-architecture.drawio
frontend/: .env.example  README.md  package.json
frontend/public/: app.js  index.html  styles.css
public/: index.html
pulsecraft/: __init__.py  base.py  composition.py  content.py  experiment.py  pipeline.py  safety.py  segmentation.py  signals.py
tests/: __init__.py  test_base.py  test_composition.py  test_content.py  test_experiment.py  test_pipeline.py  test_safety.py  test_segmentation.py  test_signals.py
